# shard

./: .gitignore  Cargo.toml  README.md  curseforge_key_extractor.py
.claude/: CLAUDE.md
.codex/: CODEX.md
.cursor/rules/: context.mdx
.github/workflows/: release-publish-automation-v2.yml  release.yml  store-publish.yml
desktop/: package.json  vite.config.ts
desktop/src/: App.tsx  styles.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  icon.png.bak
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: AccountView.tsx  LibraryView.tsx  LoaderIcon.tsx  LogsView.tsx  Modal.tsx  (+7 more)
launcher/: Cargo.toml  build.rs
launcher/src/: accounts.rs  auth.rs  config.rs  curseforge.rs  java.rs  library.rs  main.rs  minecraft.rs  modrinth.rs  ops.rs  paths.rs  skin.rs  store.rs  template.rs  updates.rs
packaging/: README.md
packaging/flathub/: md.thomas.shard.launcher.metainfo.xml  md.thomas.shard.launcher.yml  sh.shard.launcher.metainfo.xml  sh.shard.launcher.yml
packaging/scoop/: shard.json
packaging/winget/: Th0rgal.ShardLauncher.yaml
src/: accounts.rs  config.rs  content_store.rs  instance.rs  library.rs  logs.rs  main.rs  minecraft.rs  profile.rs
ui/: index.html  package.json  tailwind.config.cjs  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
web/: next.config.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/content/: _meta.js  cli.mdx  index.mdx
(+30 files in other folders)
